<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.student.application.demoapplication.RatingActivity"
    tools:showIn="@layout/activity_rating">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/ratingBarStars"
        android:layout_below="@+id/textViewRateUsLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Please tell us how much did you like to use the application:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textViewRateUsLabel"
        android:textStyle="normal|bold"
        android:textDirection="inherit"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textViewActRating"/>

    <Button
        android:text="Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRate"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editTextComments"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@+id/ratingBarStars"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/labelLastReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewActRating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />
</RelativeLayout>
